pets/kapp/resources-dev.yaml
#@ load("@ytt:data", "data")
#@ load("@ytt:overlay", "overlay")
#@ load("helpers.star","configfile","load_configfile")
---
kind: Deployment
apiVersion: apps/v1
metadata:  
  name: pets-app
  labels:
    app: pets-app
    group: micro-pet
spec:
  replicas: #@ data.values.service.replicas
  selector:
    matchLabels:
      app: pets-app
      group: micro-pet
  template:
    metadata:
      labels:
        app: pets-app
        group: micro-pet
    spec:
      volumes:
        - name: config-volume
          configMap:
            name: #@ configfile("pets-config", "pets_config.json")
            items:
            - key: pets_config.json
              path: pets_config.json
      containers:
        - name: pets
          image: #@ data.values.registry.server + "/micropet-pets:" +data.values.service.version
          imagePullPolicy: Always          
          ports:
            - name: pets
              containerPort: #@ data.values.service.port
          volumeMounts:
            - name: config-volume
              mountPath: /etc/service/
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: pets-service
  labels:
    app: pets-app
    group: micro-pet
spec:
  ports:
    - protocol: TCP
      name: http-pets
      port: #@ data.values.service.port
  selector:
    app: pets-app
    group: micro-pet
---
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: pets-ingress
spec:
  rules:
    - host: #@ data.values.service.virtual_host
      http:
        paths:
          - path: /pets
            backend:
              serviceName: pets-service
              servicePort: #@ data.values.service.port
